// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with multiple expenses correctly 1`] = `
<p>
  Viewing 
  3
   
  expenses
   totalling 
  $12.34
</p>
`;

exports[`should render ExpensesSummary with one expense correctly 1`] = `
<p>
  Viewing 
  1
   
  expense
   totalling 
  $1.23
</p>
`;
